write to inbox with ECDH