@@ -1,6 +1,5 @@
 package de.adorsys.datasafe.encrypiton.impl.cmsencryption.decryptors;
 
-import com.google.common.collect.ImmutableMap;
 import de.adorsys.datasafe.encrypiton.impl.cmsencryption.exceptions.DecryptionException;
 import lombok.experimental.UtilityClass;
 import org.bouncycastle.cms.RecipientInformation;
@@ -15,13 +14,15 @@ import java.util.function.Function;
 public class DecryptorFactory {
 
     private static final Map<Integer, Function<RecipientInformation, Decryptor>> DECRYPTORS =
-            ImmutableMap.of(
+            Map.of(
                     KekDecryptor.KEY_ID, KekDecryptor::new,
-                    KeyTransDecryptor.KEY_ID, KeyTransDecryptor::new
+                    KeyTransDecryptor.KEY_ID, KeyTransDecryptor::new,
+                    KeyAgreeDecryptor.KEY_ID, KeyAgreeDecryptor::new
             );
 
     /**
      * Get decryptor instance to decrypt data on {@code recipient}
+     *
      * @param information Container with encrypted data
      * @return Decryptor that, when supplied by proper key can decrypt data in {@code recipient}
      */
